[gd_scene load_steps=13 format=3 uid="uid://df66uydiakovo"]

[ext_resource type="Script" path="res://scripts/EVolador.gd" id="1_4syxw"]
[ext_resource type="Texture2D" uid="uid://bynfv1ax2k7e2" path="res://assets/textures/Enemies.png" id="2_qxjp7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_my60b"]
atlas = ExtResource("2_qxjp7")
region = Rect2(208, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cb524"]
atlas = ExtResource("2_qxjp7")
region = Rect2(192, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_akvxg"]
atlas = ExtResource("2_qxjp7")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4k54q"]
atlas = ExtResource("2_qxjp7")
region = Rect2(64, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqx1f"]
atlas = ExtResource("2_qxjp7")
region = Rect2(80, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_efw4k"]
atlas = ExtResource("2_qxjp7")
region = Rect2(96, 64, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_lolq1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_my60b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cb524")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_akvxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k54q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqx1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efw4k")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cgbhx"]
size = Vector2(7.5, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_08kji"]
size = Vector2(2, 4)

[sub_resource type="CircleShape2D" id="CircleShape2D_b5iun"]
radius = 42.0476

[node name="EVolador" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_4syxw")
speed = 50

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, 0.5)
scale = Vector2(0.875, 0.84375)
sprite_frames = SubResource("SpriteFrames_lolq1")
animation = &"fly"
autoplay = "fly"

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0.25, 2)
shape = SubResource("RectangleShape2D_cgbhx")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionDa√±o" type="CollisionShape2D" parent="Area2D"]
position = Vector2(5, 2)
shape = SubResource("RectangleShape2D_08kji")

[node name="AreaFollow" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionArea" type="CollisionShape2D" parent="AreaFollow"]
shape = SubResource("CircleShape2D_b5iun")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="AreaFollow" to="." method="_on_area_follow_body_entered"]
[connection signal="body_exited" from="AreaFollow" to="." method="_on_area_follow_body_exited"]
